Installed EF and Created ConnectionString

--- a/CROMA.API/appsettings.json
+++ b/CROMA.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CROMA_ConnectionString": "server=DESKTOP-EA6JUIP;database=CROMA_DB;Trusted_Connection=true;TrustServerCertificate=True;"
+  }
 }
