Seeding initial data for order table

--- a/CROMA.API/appsettings.json
+++ b/CROMA.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CROMA_ConnectionString": "server=DESKTOP-EA6JUIP;database=CROMA_DB;Trusted_Connection=true;TrustServerCertificate=True;"
+    "CROMA_ConnectionString": "server=DLEEVI7;database=CROMA_DB;Trusted_Connection=true;TrustServerCertificate=True;"
   }
 }
